--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
@@ -79,7 +79,7 @@
 					<!-- B1_1 -->
 					<div style="display: inline-block;" data-bind="if: displayGoback">
 						<a class="goback link-button"
-							data-bind="ntsLinkButton: { jump: '../../../cmm/045/a/index.xhtml'}">#{i18n.getText('KAF000_14')}</a>
+							data-bind="click: callCMM045A">#{i18n.getText('KAF000_14')}</a>
 					</div>
 					<!-- B1_2 -->
 					<button class="kaf000-function-btn"
