qmm006: fix bugs

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
@@ -82,6 +82,7 @@
 			</div>
 			<style>
 				.form-label{width: 182px}
+				div.valign-center.control-group { width: 550px }
 			</style>
 		</ui:define>
 	</ui:composition>
