--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
@@ -114,6 +114,7 @@
 			</div>
 			<style>
 				.form-label{width: 182px}
+				div.valign-center.control-group { width: 650px }
 			</style>
 		</ui:define>
 	</ui:composition>
