--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/b/index.xhtml
@@ -7,18 +7,18 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 500, height: 600 };</script>
+			<script>var dialogSize = { width: 480, height: 600 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="qmm002.b.service.js" />
 			<com:scriptfile path="qmm002.b.vm.js" />
 			<com:scriptfile path="qmm002.b.start.js" />
 		</ui:define>
 		<ui:define name="content">
-			<div class="contents-area dialog-content" style="padding: 20px 25px">
+			<div id="contents-area">
 				<div class="valign-center control-group">
 					<span class="label">#{i18n.getText('QMM002_20')}</span>
 				</div>
-				<div class="valign-center control-group">
+				<div class="valign-center control-group" style="width: 440px">
 					<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
 					<div tabindex="1" style="width: 400px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
 						targetKey: 'id', mode:'igTree', comId:'B1_4', items: bankBranchList, 
