--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/c/index.xhtml
@@ -7,87 +7,89 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 942, height: 660 };</script>
+			<script>var dialogSize = { width: 890, height: 630 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="qmm006.c.service.js" />
 			<com:scriptfile path="qmm006.c.vm.js" />
 			<com:scriptfile path="qmm006.c.start.js" />
 		</ui:define>
 		<ui:define name="content">
-			<div class="contents-area dialog-content" style="padding: 10px 25px">
-				<div class="valign-center control-group">
-					<!-- C1_1 -->
-					<span class="label">#{i18n.getText('QMM006_40')}</span><br/>
-				</div>
-				<div id="source" class="pull-left">
+			<div id="contents-area">
+				<div style="width: 880px">
 					<div class="valign-center control-group">
-						<!-- C2_1 -->
-						<span class="label">#{i18n.getText('QMM006_41')}</span>
+						<!-- C1_1 -->
+						<span class="label">#{i18n.getText('QMM006_40')}</span><br/>
 					</div>
-					<div class="valign-center control-group">
-						<!-- C2_2 -->
-						<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
-						<!-- C2_3 -->
-						<div tabindex="1" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
-							targetKey: 'code', mode:'igGrid', comId:'gridsource', items: listSourceBankLeft, 
-							selected: selectedCodeLeft, selectedKey: 'code', fields: ['name', 'code']}" />
+					<div id="source" class="pull-left">
+						<div class="valign-center control-group">
+							<!-- C2_1 -->
+							<span class="label">#{i18n.getText('QMM006_41')}</span>
+						</div>
+						<div class="valign-center control-group">
+							<!-- C2_2 -->
+							<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
+							<!-- C2_3 -->
+							<div tabindex="1" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
+								targetKey: 'code', mode:'igGrid', comId:'gridsource', items: listSourceBankLeft, 
+								selected: selectedCodeLeft, selectedKey: 'code', fields: ['name', 'code']}" />
+						</div>
+						<!-- C2_4 -->
+						<table id="gridsource" tabindex="2" data-bind="ntsGridList: {
+							rows: 15,
+							width: '400px',
+							name: '#[QMM006_42]', 
+							dataSource: listSourceBankLeft,
+							primaryKey: 'code', 
+							columns: [
+				                { headerText: '#{i18n.getText('QMM006_8')}', key: 'code', width: 50, formatter: _.escape },
+				                { headerText: '#{i18n.getText('QMM006_9')}', key: 'name', width: 170, formatter: _.escape },
+				                { headerText: '#{i18n.getText('QMM006_10')}', key: 'accountType', width: 80, formatter: _.escape },
+				                { headerText: '#{i18n.getText('QMM006_11')}', key: 'accountNumber', width: 100, formatter: _.escape }
+				            ], 
+							multiple: false,
+							columnResize: true,
+							itemDraggable: true,
+							value: selectedCodeLeft
+						}"></table>
 					</div>
-					<!-- C2_4 -->
-					<table id="gridsource" tabindex="2" data-bind="ntsGridList: {
-						rows: 15,
-						width: '400px',
-						name: '#[QMM006_42]', 
-						dataSource: listSourceBankLeft,
-						primaryKey: 'code', 
-						columns: [
-			                { headerText: '#{i18n.getText('QMM006_8')}', key: 'code', width: 50, formatter: _.escape },
-			                { headerText: '#{i18n.getText('QMM006_9')}', key: 'name', width: 170, formatter: _.escape },
-			                { headerText: '#{i18n.getText('QMM006_10')}', key: 'accountType', width: 80, formatter: _.escape },
-			                { headerText: '#{i18n.getText('QMM006_11')}', key: 'accountNumber', width: 100, formatter: _.escape }
-			            ], 
-						multiple: false,
-						columnResize: true,
-						itemDraggable: true,
-						value: selectedCodeLeft
-					}"></table>
-				</div>
-				<div id="midsec" class="pull-left" style="width: 65px">
-					<!-- C3_1 -->
-					<hr width="1" size="430"/>
-					<!-- C3_2 -->
-					<span class="caret-right caret-inline"></span>
-				</div>
-				<div id="destination" class="pull-left">
-					<div class="valign-center control-group">
-						<!-- C4_1 -->
-						<span class="label">#{i18n.getText('QMM006_43')}</span>
+					<div id="midsec" class="pull-left" style="width: 65px">
+						<!-- C3_1 -->
+						<hr width="1" size="430"/>
+						<!-- C3_2 -->
+						<span class="caret-right caret-inline"></span>
 					</div>
-					<div class="valign-center control-group">
-						<!-- C4_2 -->
-						<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
-						<!-- C4_3 -->
-						<div tabindex="3" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
-							targetKey: 'code', mode:'igGrid', comId:'griddestination', items: listSourceBankRight, 
-							selected: selectedCodeRight, selectedKey: 'code', fields: ['name', 'code']}" />
+					<div id="destination" class="pull-left">
+						<div class="valign-center control-group">
+							<!-- C4_1 -->
+							<span class="label">#{i18n.getText('QMM006_43')}</span>
+						</div>
+						<div class="valign-center control-group">
+							<!-- C4_2 -->
+							<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
+							<!-- C4_3 -->
+							<div tabindex="3" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
+								targetKey: 'code', mode:'igGrid', comId:'griddestination', items: listSourceBankRight, 
+								selected: selectedCodeRight, selectedKey: 'code', fields: ['name', 'code']}" />
+						</div>
+						<!-- C4_4 -->
+						<table id="griddestination" tabindex="4" data-bind="ntsGridList: {
+							rows: 15,
+							width: '400px',
+							name: '#[QMM006_44]', 
+							dataSource: listSourceBankRight,
+							primaryKey: 'code', 
+							columns: [
+				                { headerText: '#{i18n.getText('QMM006_8')}', key: 'code', width: 50, formatter: _.escape },
+				                { headerText: '#{i18n.getText('QMM006_9')}', key: 'name', width: 170, formatter: _.escape },
+				                { headerText: '#{i18n.getText('QMM006_10')}', key: 'accountType', width: 80, formatter: _.escape },
+				                { headerText: '#{i18n.getText('QMM006_11')}', key: 'accountNumber', width: 100, formatter: _.escape }
+				            ], 
+							multiple: false,
+							columnResize: true,
+							itemDraggable: true,
+							value: selectedCodeRight
+						}"></table>
 					</div>
-					<!-- C4_4 -->
-					<table id="griddestination" tabindex="4" data-bind="ntsGridList: {
-						rows: 15,
-						width: '400px',
-						name: '#[QMM006_44]', 
-						dataSource: listSourceBankRight,
-						primaryKey: 'code', 
-						columns: [
-			                { headerText: '#{i18n.getText('QMM006_8')}', key: 'code', width: 50, formatter: _.escape },
-			                { headerText: '#{i18n.getText('QMM006_9')}', key: 'name', width: 170, formatter: _.escape },
-			                { headerText: '#{i18n.getText('QMM006_10')}', key: 'accountType', width: 80, formatter: _.escape },
-			                { headerText: '#{i18n.getText('QMM006_11')}', key: 'accountNumber', width: 100, formatter: _.escape }
-			            ], 
-						multiple: false,
-						columnResize: true,
-						itemDraggable: true,
-						value: selectedCodeRight
-					}"></table>
 				</div>
 			</div>
 			<div id="functions-area-bottom">
