--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/index.xhtml
@@ -79,6 +79,7 @@
                     <table id="grid" data-bind="ntsGridList: {
                         width: 830,
                         rows: 7,
+                        columnResize: true,
                         dataSource: layoutPatternData,
                         primaryKey: 'id',
                         columns: layoutPatternColumns,
