--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -61,12 +61,12 @@
                             </div>
                             <div>
                                 <button data-bind = "click: addStatementItem, enable: selectedStatementItemCode()"
-                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM016_50')}</button>
+                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM017_50')}</button>
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
-                            <hr style="margin-top:15px;"></hr>
+                            <hr></hr>
                             <div data-bind="text: displayItemNote"></div>
                         </div>
                     </div>
@@ -116,12 +116,12 @@
                             </div>
                             <div>
                                 <button data-bind = "click: addUnitPriceItem, enable: selectedUnitPriceItemCode()"
-                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM016_50')}</button>
+                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM017_50')}</button>
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
-                            <hr style="margin-top:15px;"></hr>
+                            <hr></hr>
                             <div data-bind="text: displayUnitPriceItemNote"></div>
                         </div>
                     </div>
@@ -170,13 +170,13 @@
                             ]}">
                             </div>
                             <div>
-                                <button data-bind = "click: addFunctionItem, enable: selectedFunctionListValue() != null"
-                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM016_50')}</button>
+                                <button data-bind = "click: addFunctionItem, enable: selectedFunctionListValue() || (!selectedFunctionListValue() &amp;&amp; selectedFunctionListValue() === 0)"
+                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM017_50')}</button>
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
-                            <hr style="margin-top:15px;"></hr>
+                            <hr></hr>
                             <div data-bind="text: displayFunctionNote"></div>
                         </div>
                     </div>
@@ -225,13 +225,13 @@
                             ]}">
                             </div>
                             <div>
-                                <button data-bind = "click: addVariableItem, enable: selectedSystemVariableListValue() != null"
-                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM016_50')}</button>
+                                <button data-bind = "click: addVariableItem, enable: selectedSystemVariableListValue() || !selectedSystemVariableListValue() &amp;&amp; selectedSystemVariableListValue() === 0"
+                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM017_50')}</button>
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
-                            <hr style="margin-top:15px;"></hr>
+                            <hr></hr>
                             <div data-bind="text: displayVariableNote"></div>
                         </div>
                     </div>
@@ -242,11 +242,11 @@
                 <div class="tab-content-6">
                     <div class="tab-panel-row">
                         <div class="tab-panel-col-1" id="D9_1" data-bind="ntsListBox: {
-                        options: systemVariableClassificationItem,
+                        options: formulaSystemVariableClassificationItem,
                         optionsValue: 'value',
                         optionsText: 'name',
                         multiple: false,
-                        value: selectedSystemVariableClassificationValue,
+                        value: formulaSelectedSystemVariableClassificationValue,
                         enable: true,
                         rows: 8,
                         columns: [
@@ -284,7 +284,7 @@
                             </div>
                             <div>
                                 <button data-bind = "click: addFormulaItem, enable: selectedFormulaCode()"
-                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM016_50')}</button>
+                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM017_50')}</button>
                             </div>
                         </div>
                         <div>
@@ -295,11 +295,11 @@
                 <div class="tab-content-7">
                     <div class="tab-panel-row">
                         <div class="tab-panel-col-1" id="D10_1" data-bind="ntsListBox: {
-                        options: systemVariableClassificationItem,
+                        options: wageSystemVariableClassificationItem,
                         optionsValue: 'value',
                         optionsText: 'name',
                         multiple: false,
-                        value: selectedSystemVariableClassificationValue,
+                        value: wageSelectedSystemVariableClassificationValue,
                         enable: true,
                         rows: 8,
                         columns: [
@@ -338,12 +338,12 @@
                             </div>
                             <div>
                                 <button data-bind = "click: addWageTableItem, enable: selectedWageTableCode()"
-                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM016_50')}</button>
+                                        class="formula-button caret-bottom large-caret">#{i18n.getText('QMM017_50')}</button>
                             </div>
                         </div>
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
-                            <hr style="margin-top:15px;"></hr>
+                            <hr></hr>
                             <div data-bind="text: selectedWageTable().remarkInformation"></div>
                         </div>
                     </div>
@@ -412,7 +412,7 @@
                     name: '#[QMM017_55]',
                     options: referenceMonthItem,
                     optionsValue: 'value',
-                    visibleItemsCount: 5,
+                    visibleItemsCount: 13,
                     value: referenceMonth,
                     optionsText: 'name',
                     enable: true,
