--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 <ui:composition template="../../../../master/dialog.xhtml">
     <ui:define name="htmlHead">
-        <script>var dialogSize = {width: 750, height: 545};</script>
+        <script>var dialogSize = {width: 695, height: 545};</script>
         <com:scriptfile set="IGNITE"/>
         <com:scriptfile path="../share/model.js"/>
         <com:scriptfile path="qmm017.g.service.js"/>
@@ -22,9 +22,9 @@
                     <div style="width: 130px; margin-top: 20px; display: inline-block;"
                          data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM017_142')}</div>
                 </div>
-                <div style="min-width: 550px; margin-top: 10px;">
+                <div style="min-width: 650px; margin-top: 10px;">
                     <div style = "display: inline-block; vertical-align: middle">
-                        <div tabindex = "0">
+                        <div id ="G1_2_container" tabindex = "0">
                             <table id="G1_2">
                                 <colgroup>
                                     <col width="150px"/>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div style = "display:inline-block; vertical-align: middle; margin-left: 25px;">
-                        <button data-bind = "click: calculate" style = "height: 80px; width: 80px;">#{i18n.getText('QMM017_53')}</button>
+                        <button data-bind = "click: calculateInServer" style = "height: 80px; width: 80px;">#{i18n.getText('QMM017_53')}</button>
                     </div>
                     <div class="large-right-caret-container" style="display: inline-block; margin-left: 10px;">
                         <span class="caret-right outline large-right-caret"></span>
@@ -76,7 +76,7 @@
                 <div style="margin-top: 10px; min-width: 550px;">
                     <div style="margin-top: 10px; min-width: 550px">
                         <div>
-                        <textarea style = "height: 100px; width: 595px;" data-bind="ntsMultilineEditor: {
+                        <textarea style = "height: 100px; width: 625px;" data-bind="ntsMultilineEditor: {
                             value: formulaContent,
                             enable: false}"/>
                         </div>
@@ -85,8 +85,7 @@
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button
-                    data-bind="click: closeDialog">#{i18n.getText('QMM017_146')}</button>
+            <button data-bind="click: closeDialog">#{i18n.getText('QMM017_146')}</button>
         </div>
     </ui:define>
 
