--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
@@ -54,7 +54,7 @@
                 <div id="right-item">
                     <div class="valign-center control-group">
                         <!-- ※すべての履歴を削除すると、明細書のデータも削除します -->
-                        <label id="C1_10">#{i18n.getText('QMM019_103')}</label>
+                        <label id="C1_10" class="color-danger">#{i18n.getText('QMM019_103')}</label>
                     </div>
                     <div class="valign-center control-group">
                         <!-- 開始年月 -->
