update KDW006 name button

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/006/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/006/a/index.xhtml
@@ -66,7 +66,7 @@
 			<div id="tabpanel-monthly" role="tabpanel">
 				<div class="sidebar-content-header">
 					<span class="title">#{i18n.getText('KDW006_7')}</span>
-					<button id="print-button-monthly"  data-bind="click: exportExcel">#{i18n.getText('KDW006_85')}</button>
+					<button id="print-button-monthly"  data-bind="click: exportExcelMonthly">#{i18n.getText('KDW006_85')}</button>
 				</div>
 				<div class="contents-area">
 					<button id="button4" tabindex="4" class="x-large caret-right" data-bind="click: open002ControlMonth">#{i18n.getText('KDW006_2')}</button>
