qmm002, 3, 6: fix bugs

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
@@ -15,7 +15,7 @@
 			<com:scriptfile path="qmm003.d.start.js" />
 		</ui:define>
 		<ui:define name="content">
-			<div class="contents-area dialog-content" style="padding: 15px 25px">
+			<div id="contents-area" style="padding: 15px 25px">
 				<div class="valign-center control-group">
 					<!-- D1_1 -->
 					<span class="label">#{i18n.getText('QMM003_27')}</span>
@@ -24,7 +24,7 @@
 					<!-- D1_2 -->
 					<span class="label">#{i18n.getText('QMM003_28')}</span>
 				</div>
-				<div class="valign-center control-group">
+				<div class="valign-center control-group" style="width: 400px">
 					<!-- D1_3 -->
 					<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
 					<!-- D1_4 -->
