--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/a/index.xhtml
@@ -150,13 +150,13 @@
 							name: '#[QMM006_22]',
 							value: entrustorInforCode1,
 							constraint: 'EntrustorCode',
-							required: false}" />
+							required: entrustorInforCode1Required}" />
 						<!-- A3_24 -->
 						<input tabindex="16" data-bind="ntsTextEditor: {
 							name: '#[QMM006_23]',
 							value: entrustorInforUse1,
 							constraint: 'EntrustorUse',
-							required: false}" />
+							required: entrustorInforUse1Required}" />
 					</div>
 					<div class="valign-center control-group">
 						<!-- A3_25 -->
@@ -166,13 +166,13 @@
 							name: '#[QMM006_25]',
 							value: entrustorInforCode2,
 							constraint: 'EntrustorCode',
-							required: false}" />
+							required: entrustorInforCode2Required}" />
 						<!-- A3_27 -->
 						<input tabindex="18" data-bind="ntsTextEditor: {
 							name: '#[QMM006_26]',
 							value: entrustorInforUse2,
 							constraint: 'EntrustorUse',
-							required: false}" />
+							required: entrustorInforUse2Required}" />
 					</div>
 					<div class="valign-center control-group">
 						<!-- A3_28 -->
@@ -182,13 +182,13 @@
 							name: '#[QMM006_28]',
 							value: entrustorInforCode3,
 							constraint: 'EntrustorCode',
-							required: false}" />
+							required: entrustorInforCode3Required}" />
 						<!-- A3_30 -->
 						<input tabindex="20" data-bind="ntsTextEditor: {
 							name: '#[QMM006_29]',
 							value: entrustorInforUse3,
 							constraint: 'EntrustorUse',
-							required: false}" />
+							required: entrustorInforUse3Required}" />
 					</div>
 					<div class="valign-center control-group">
 						<!-- A3_31 -->
@@ -198,13 +198,13 @@
 							name: '#[QMM006_31]',
 							value: entrustorInforCode4,
 							constraint: 'EntrustorCode',
-							required: false}" />
+							required: entrustorInforCode4Required}" />
 						<!-- A3_33 -->
 						<input tabindex="22" data-bind="ntsTextEditor: {
 							name: '#[QMM006_32]',
 							value: entrustorInforUse4,
 							constraint: 'EntrustorUse',
-							required: false}" />
+							required: entrustorInforUse4Required}" />
 					</div>
 					<div class="valign-center control-group">
 						<!-- A3_34 -->
@@ -214,13 +214,13 @@
 							name: '#[QMM006_34]',
 							value: entrustorInforCode5,
 							constraint: 'EntrustorCode',
-							required: false}" />
+							required: entrustorInforCode5Required}" />
 						<!-- A3_36 -->
 						<input tabindex="24" data-bind="ntsTextEditor: {
 							name: '#[QMM006_35]',
 							value: entrustorInforUse5,
 							constraint: 'EntrustorUse',
-							required: false}" />
+							required: entrustorInforUse5}" />
 					</div>
 				</div>
 			</div>
