--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
@@ -200,6 +200,7 @@
 			</div>
 			<style>
 				.form-label{width: 185px}
+				div.valign-center.control-group { width: 610px }
 			</style>
 	    </ui:define>
 	</ui:composition>
