--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/e/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 942, height: 740 };</script>
+			<script>var dialogSize = { width: 900, height: 630 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="../share/constants.js"/>
 			<com:scriptfile path="qmm003.e.service.js" />
@@ -15,96 +15,101 @@
 			<com:scriptfile path="qmm003.e.start.js" />
 		</ui:define>
 		<ui:define name="content">
-			<div class="contents-area dialog-content" style="padding: 10px 25px">
-				<div class="valign-center control-group">
-					<!-- E1_1 -->
-					<span class="label">#{i18n.getText('QMM003_29')}</span><br/>
-				</div>
-				<div class="valign-center control-group">
-					<!-- E1_2 -->
-					<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM003_30')}</div>
-					<!-- E1_3 -->
-					<div id="E1_3" tabindex="13"
-                                 data-bind="ntsDatePicker: {
-                                    name: '#[QMM016_16]',
-                                    value: targetYm,
-                                    dateFormat: 'yearmonth',
-                                    valueFormat: 'YYYYMM',
-                                    required: true,
-                                    enable: true}"/>
-					<!-- E1_4 -->
-					<div style="margin-left: 10px; display: inline" id="E1_4" data-bind="text: displayJapanYm"/>
-				</div>
-				<div id="source" style="float: left">
+			<div id="contents-area">
+				<div style="width: 870px">
 					<div class="valign-center control-group">
-						<!-- E2_1 -->
-						<span class="label">#{i18n.getText('QMM003_31')}</span>
+						<!-- E1_1 -->
+						<span class="label">#{i18n.getText('QMM003_29')}</span><br/>
 					</div>
 					<div class="valign-center control-group">
-						<!-- E2_2 -->
-						<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
-						<!-- E2_3 -->
-						<div tabindex="2" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
-							targetKey: 'code', mode:'igTree', comId:'treegridsource', items: source, 
-							selected: sourceSelectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+						<!-- E1_2 -->
+						<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM003_30')}</div>
+						<!-- E1_3 -->
+						<div id="E1_3" tabindex="13"
+	                                 data-bind="ntsDatePicker: {
+	                                    name: '#[QMM016_16]',
+	                                    value: targetYm,
+	                                    dateFormat: 'yearmonth',
+	                                    valueFormat: 'YYYYMM',
+	                                    required: true,
+	                                    enable: true}"/>
+						<!-- E1_4 -->
+						<div style="margin-left: 10px; display: inline" id="E1_4" data-bind="text: displayJapanYm"/>
 					</div>
-					<!-- E2_4 -->
-					<table id="treegridsource" tabindex="3"
-						data-bind="ntsTreeGridView:{
-							width: 400,
-							rows: 13,
-							name: '#[QMM003_32]',
-							dataSource: source,
-							value: sourceSelectedCode,
-							headers: headers,
-							primaryKey: 'code',
-							childDataKey: 'children',
-							primaryText: 'nodeText',
-							multiple: false,
-							enable: true,
-							initialExpandDepth: 1,
-							showCheckBox: false}"></table>
-				</div>
-				<div id="midsec" style="float: left; width: 65px">
-					<!-- E1_5 -->
-					<hr width="1" size="400"/>
-					<!-- E1_6 -->
-					<span class="caret-right caret-inline"></span>
-				</div>
-				<div id="destination" style="float: left">
-					<div class="valign-center control-group">
-						<!-- E3_1 -->
-						<span class="label">#{i18n.getText('QMM003_33')}</span>
+					<div class="cf">
+						<div id="source" style="float: left">
+							<div class="valign-center control-group">
+								<!-- E2_1 -->
+								<span class="label">#{i18n.getText('QMM003_31')}</span>
+							</div>
+							<div class="valign-center control-group">
+								<!-- E2_2 -->
+								<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
+								<!-- E2_3 -->
+								<div tabindex="2" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
+									targetKey: 'code', mode:'igTree', comId:'treegridsource', items: source, 
+									selected: sourceSelectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+							</div>
+							<!-- E2_4 -->
+							<table id="treegridsource" tabindex="3"
+								data-bind="ntsTreeGridView:{
+									width: 400,
+									rows: 13,
+									name: '#[QMM003_32]',
+									dataSource: source,
+									value: sourceSelectedCode,
+									headers: headers,
+									primaryKey: 'code',
+									childDataKey: 'children',
+									primaryText: 'nodeText',
+									multiple: false,
+									enable: true,
+									initialExpandDepth: 1,
+									showCheckBox: false}"></table>
+						</div>
+						<div id="midsec" style="float: left; width: 65px">
+							<!-- E1_5 -->
+							<hr width="1" size="395"/>
+							<!-- E1_6 -->
+							<span class="caret-right caret-inline"></span>
+						</div>
+						<div id="destination" style="float: left">
+							<div class="valign-center control-group">
+								<!-- E3_1 -->
+								<span class="label">#{i18n.getText('QMM003_33')}</span>
+							</div>
+							<div class="valign-center control-group">
+								<!-- E3_2 -->
+								<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
+								<!-- E3_3 -->
+								<div tabindex="4" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
+									targetKey: 'code', mode:'igTree', comId:'treegriddestination', items: destination, 
+									selected: selectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+							</div>
+							<!-- E3_4 -->
+							<table id="treegriddestination" tabindex="5"
+								data-bind="ntsTreeGridView:{
+									width: 400,
+									rows: 13,
+									name: '#[QMM003_34]',
+									dataSource: destination,
+									value: selectedCode,
+									headers: headers,
+									primaryKey: 'code',
+									childDataKey: 'children',
+									primaryText: 'nodeText',
+									multiple: false,
+									enable: true,
+									initialExpandDepth: 1,
+									showCheckBox: false}"></table>
+						</div>
 					</div>
-					<div class="valign-center control-group">
-						<!-- E3_2 -->
-						<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
-						<!-- E3_3 -->
-						<div tabindex="4" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
-							targetKey: 'code', mode:'igTree', comId:'treegriddestination', items: destination, 
-							selected: selectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
-					</div>
-					<!-- E3_4 -->
-					<table id="treegriddestination" tabindex="5"
-						data-bind="ntsTreeGridView:{
-							width: 400,
-							rows: 13,
-							name: '#[QMM003_34]',
-							dataSource: destination,
-							value: selectedCode,
-							headers: headers,
-							primaryKey: 'code',
-							childDataKey: 'children',
-							primaryText: 'nodeText',
-							multiple: false,
-							enable: true,
-							initialExpandDepth: 1,
-							showCheckBox: false}"></table>
+					
 				</div>
 			</div>
 			<div id="functions-area-bottom">
 				<!-- E4_1 -->
-				<button tabindex="6" class="x-large proceed" data-bind="click: execute, enable: sourceSelectedCode().length > 2 &amp;&amp; selectedCode().length > 2, timeClick: 500">#{i18n.getText('QMM003_35')}</button>
+				<button tabindex="6" class="x-large proceed" data-bind="click: execute, enable: sourceSelectedCode().length > 2 &amp;&amp; selectedCode().length > 2 &amp;&amp; $root.errors.isEmpty, timeClick: 500">#{i18n.getText('QMM003_35')}</button>
 				<!-- E4_2 -->
 				<button tabindex="7" data-bind="click: close, timeClick: 500">#{i18n.getText('QMM003_25')}</button>
 			</div>
