qmm006: fix bugs

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/c/index.xhtml
@@ -25,7 +25,7 @@
 							<!-- C2_1 -->
 							<span class="label">#{i18n.getText('QMM006_41')}</span>
 						</div>
-						<div class="valign-center control-group">
+						<div class="valign-center control-group cf">
 							<!-- C2_2 -->
 							<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
 							<!-- C2_3 -->
@@ -63,7 +63,7 @@
 							<!-- C4_1 -->
 							<span class="label">#{i18n.getText('QMM006_43')}</span>
 						</div>
-						<div class="valign-center control-group">
+						<div class="valign-center control-group cf">
 							<!-- C4_2 -->
 							<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
 							<!-- C4_3 -->
