--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/004/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/004/d/index.xhtml
@@ -48,6 +48,7 @@
 				<span class="action-bar">
 				<button tabindex="6" data-bind="click: saveWorkplace, enable: (selectedWorkplaceId()) &amp;&amp; $root.errors.isEmpty" class="proceed">#{i18n.getText('KMK004_27')}</button>
 				<button tabindex="7" class="danger" data-bind="click: removeWorkplace, disable: worktimeVM.isNewMode() || !selectedWorkplaceId()">#{i18n.getText('KMK004_29')}</button>
+				<button tabindex="8" id="print-button" data-bind="click: saveAsExcel" style="width: 120px;">#{i18n.getText('KMK004_193')}</button>
 				</span>
 			</div>
 			<div class="contents-area cf fixed-flex-layout" style="margin-left: 30px;">
