qmm016: fix bug & change

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
@@ -38,7 +38,7 @@
 	                    <th class="ui-widget-header">
 	                        <div style="display: inline-block">#{i18n.getText('QMM016_27')}</div>
 	                        <button style="display: inline-block"
-	                                data-bind="ntsHelpButton: {image: '../resource/QMM016_1.png', position: 'bottom left'}">?</button>
+	                                data-bind="ntsHelpButton: {image: '../resource/＃QMM017_1.png', position: 'bottom left'}">?</button>
 	                    </th>
 	                    <th class="ui-widget-header">#{i18n.getText('QMM016_28')}</th>
 	                </tr>
