--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/c.xhtml
@@ -38,7 +38,7 @@
 	                    <th class="ui-widget-header">
 	                        <div style="display: inline-block">#{i18n.getText('QMM016_27')}</div>
 	                        <button style="display: inline-block"
-	                                data-bind="ntsHelpButton: {image: '../resource/QMM016_2.png', position: 'bottom left'}">?
+	                                data-bind="ntsHelpButton: {image: '../resource/＃QMM017_2.png', position: 'bottom left'}">?
 	                        </button>
 	                    </th>
 	                    <th class="ui-widget-header">#{i18n.getText('QMM016_28')}</th>
@@ -108,7 +108,7 @@
     	<table id="wage-table-content-layout">
 			<thead>
 				<tr>
-					<td rowspan="2" style="border: none;"><img style="" src="../resource/QMM016_6.png"></img></td>
+					<td rowspan="2" style="border: none;"><img style="" src="../resource/＃QMM017_6.png"></img></td>
 					<td style="height: 32px; border: none;"></td>
 					<td style="border: none;"></td>
 				</tr>
@@ -118,7 +118,7 @@
                             <div data-bind="text: elementName"></div>
                         </div>
 					</th>
-					<td rowspan="2" style="border: none;"><img style="" src="../resource/QMM016_7.png"></img></td>
+					<td rowspan="2" style="border: none;"><img style="" src="../resource/＃QMM017_7.png"></img></td>
 				</tr>
 				<tr>
 					<th class="ui-widget-header">
