--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/f.xhtml
@@ -38,7 +38,7 @@
 	                    <th class="ui-widget-header">
 	                        <div style="display: inline-block">#{i18n.getText('QMM016_27')}</div>
 	                        <button style="display: inline-block"
-	                                data-bind="ntsHelpButton: {image: '../resource/QMM016_5.png', position: 'bottom left'}">?
+	                                data-bind="ntsHelpButton: {image: '../resource/＃QMM017_5.png', position: 'bottom left'}">?
 	                        </button>
 	                    </th>
 	                    <th class="ui-widget-header">#{i18n.getText('QMM016_28')}</th>
@@ -116,7 +116,7 @@
         <table>
 			<thead>
 				<tr>
-					<td rowspan="2" style="border: none;"><img src="../resource/QMM016_6.png"></img></td>
+					<td rowspan="2" style="border: none;"><img src="../resource/＃QMM017_6.png"></img></td>
 					<td style="border: none; padding: 0 0px">
 						<div style="display: inline-block; background-color: #CFF1A5; border: 1px solid #CCC; font-weight: bold; color: #000;">
 							<div style="width: 150px; display: inline-block;">
@@ -136,7 +136,7 @@
 			                         { prop: 'name', length: 10 },
 			                     ]}"></div>
 						</div>
-						<img src="../resource/QMM016_8.png"></img>
+						<img src="../resource/＃QMM017_8.png"></img>
 	                </td>
 					<td style="border: none;"></td>
 				</tr>
@@ -146,7 +146,7 @@
 	                        <div data-bind="text: elementName"></div>
 	                    </div>
 	                </th>
-					<td rowspan="2" style="border: none;"><img src="../resource/QMM016_7.png"></img></td>
+					<td rowspan="2" style="border: none;"><img src="../resource/＃QMM017_7.png"></img></td>
 				</tr>
 				<tr>
 					<th class="ui-widget-header">
