--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/g/index.xhtml
@@ -16,7 +16,7 @@
         <com:scriptfile path="qmm016.g.start.js" />
     </ui:define>
     <ui:define name="content">
-        <div class="contents-area">
+        <div id="contents-area">
             <div style = "color: white">to fix scroll</div>
             <div  style="margin-left: 40px;margin-top: 20px">
                 <table id="G2_1" tabindex="3"
