--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/i/index.xhtml
@@ -15,7 +15,7 @@
         <com:scriptfile path="qmm016.i.start.js" />
     </ui:define>
     <ui:define name="content">
-        <div class="contents-area" style="margin-left: 20px;">
+        <div id="contents-area">
             <div class="label dialog-title">#{i18n.getText('QMM016_74')}</div>
             <div style="margin-top: 20px; min-width: 550px">
                 <div style="width: 130px; display: inline-block;"
