--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/j/index.xhtml
@@ -16,7 +16,7 @@
 		<com:scriptfile path="qmm016.j.start.js" />
 	</ui:define>
 	<ui:define name="content">
-		<div class="contents-area" style="margin-left: 20px;">
+		<div id="contents-area">
 			<div class="label dialog-title">#{i18n.getText('QMM016_78')}</div>
 			<div style="margin-top: 20px; min-width: 550px">
 				<div style="width: 130px; display: inline-block;"
@@ -39,7 +39,7 @@
 										optionsText: 'name'}"></div>
 
 				</div>
-				<span style = "position: absolute; z-index: -1; margin-top: 37px; margin-left: 10px;" class="label warning tab-row">#{i18n.getText('QMM016_80')}</span>
+				<span style = "position: absolute; z-index: -1; margin-top: 27px; margin-left: 13px; width: 435px;" class="label warning tab-row">#{i18n.getText('QMM016_80')}</span>
 				<div style="margin-top: 100px; margin-left: 150px;  min-width: 420px">
 					<div style="width: 100px; display: inline-block"
 						 data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_75')}</div>
