qmm017 fix bug ui and split dot character

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
@@ -98,23 +98,21 @@
 }
 .search-box-sm {
     margin-left: 40px;
-    width: 88px;
+    width: 150px;
 }
 .formula-button {
     width: 232px;
 }
-.list-box tr td:nth-child(1) {
-    width: 65px;
-}
-#D9_5_grid tr td:nth-child(2) {
+.list-box tr td:nth-child(2) {
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     width: 148px;
+}
+.list-box .ui-iggrid .ui-iggrid-tablebody td {
     height: 23px;
 }
-
 textarea {
     resize: none;
     background: transparent;
