--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
@@ -81,7 +81,7 @@
                                     <button class = "small" id = "E2_4" data-bind = "click: function(){$vm.selectTargetItem()}" tabindex = "4">#{i18n.getText('QMM017_107')}</button>
                                     <input data-bind="ntsTextEditor: {
                                         value: $vm.baseAmountTargetItem,
-                                        enable: false}" />
+                                        readonly: true}" />
                                 </div>
                                 <!--E2_6-->
                                 <div  data-bind = "if: standardAmountClassification() == 0">
