--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
@@ -19,10 +19,13 @@
 				</div>
 				 -->
 				<div tabindex="-1" id="contents-area" class="fixed-flex-layout">
-				<div>
+			<div>
+				<div style="margin-left: 34px">
 				<button id="print-button" data-bind="click: opencdl028Dialog">#{i18n.getText('KMK007_4')}</button>
 				</div>
+				  
 					<div tabindex="-1" class="master_setting caret-inline" style="width: 304px;">
+						<!--  <button id="print-button" data-bind="click: opencdl028Dialog">#{i18n.getText('KMK007_4')}</button> -->
 						<div tabindex="-1" class="master_title_left" style="width: 265px;">
 							<label tabindex="-1" class="label_master">#{i18n.getText('KMK011_40')}</label>
 						</div>
@@ -30,9 +33,10 @@
 						
 						<button id="btn_openB" tabindex="1" class="large btnconfig" data-bind="click: openDivergenceTimeSetting">#{i18n.getText('KMK011_42')}</button>
 					</div>
+				</div>	
 					<span tabindex="-1" class="master_setting_caret caret-right"></span>
 					
-					<div tabindex="-1" class="master_setting caret-inline" style="width: 304px; height: 325px;">
+					<div tabindex="-1" class="master_setting caret-inline" style="width: 304px; height: 325px;margin-top: 35px">
 						<div tabindex="-1" class="master_title_right">
 							<label tabindex="-1" class="label_master">#{i18n.getText('KMK011_45')}</label>
 						</div>
