--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
@@ -69,14 +69,23 @@
 }
 
 .data-layout .form-groups {
-	z-index: 9;
+	/*z-index: 9;*/
 }
 
 .data-layout .form-group.configs-bar {
 	padding-left: 125px;
+	margin-bottom: 0px;
 }
 
 .data-layout .layout-multi-control {
 	z-index: 0;
 	margin-top: -60px;
+}
+
+/*.datepicker-dropdown {
+	z-index: 999;
+}*/
+
+td.required {
+	background-color: #FAC002 !important;
 }
