fixbug 105358: add css height of tr grid

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/x/cmf002.x.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/x/cmf002.x.style.css
@@ -40,7 +40,7 @@
 }
 
 #execHistGrid tr {
-	height: 10px;\
+	height: 10px;
 	white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -50,4 +50,8 @@
 	white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+#execHistGrid tbody tr {
+	height: 29px;
 }
