update kmk011,kml001,add kmk013

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/013/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/013/a/index.xhtml
@@ -19,7 +19,11 @@
 			<div id="contents-area" class="table">
 				<!-- floor 1  -->
 				<div>
+					<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+				</div>
+				<div>
 					<!-- A1_1 -->
+					
 					<div class="panel panel-frame contents-area-middle boder-style"  style="height: 100px">
 						<!-- A1_2 -->
 						<!-- A1_3 -->
