qmm017 fix bug and update qa

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -67,7 +67,7 @@
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
                             <hr></hr>
-                            <div data-bind="text: displayItemNote"></div>
+                            <div style = "word-break: break-all" data-bind="text: displayItemNote"></div>
                         </div>
                     </div>
                 </div>
