qmm017 update word break

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
@@ -113,6 +113,10 @@
 .list-box .ui-iggrid .ui-iggrid-tablebody td {
     height: 23px;
 }
+.display-notes {
+    word-break: break-all;
+    max-height: 275px;
+}
 textarea {
     resize: none;
     background: transparent;
