--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/d/index.xhtml
@@ -67,7 +67,7 @@
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
                             <hr></hr>
-                            <div style = "word-break: break-all" data-bind="text: displayItemNote"></div>
+                            <div class ="display-notes" data-bind="text: displayItemNote"></div>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
                             <hr></hr>
-                            <div style = "word-break: break-all" data-bind="text: displayUnitPriceItemNote"></div>
+                            <div class ="display-notes" data-bind="text: displayUnitPriceItemNote"></div>
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
                             <hr></hr>
-                            <div style = "word-break: break-all" data-bind="text: displayFunctionNote"></div>
+                            <div class ="display-notes" data-bind="text: displayFunctionNote"></div>
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
                             <hr></hr>
-                            <div style = "word-break: break-all" data-bind="text: displayVariableNote"></div>
+                            <div class ="display-notes" data-bind="text: displayVariableNote"></div>
                         </div>
                     </div>
                 </div>
@@ -344,7 +344,7 @@
                         <div class="panel panel-gray-bg tab-panel-col-3">
                             <div style="margin-top:5px;">#{i18n.getText('QMM017_49')}</div>
                             <hr></hr>
-                            <div style = "word-break: break-all" data-bind="text: selectedWageTable().remarkInformation"></div>
+                            <div class ="display-notes" data-bind="text: selectedWageTable().remarkInformation"></div>
                         </div>
                     </div>
                 </div>
