QMM020 I; update UI

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
@@ -51,11 +51,11 @@
                     </div>
                     <div class="cell">
                         <!--I1_6-->
-                        <button data-bind="ntsHelpButton: {image: 'helpcps0092.png',position: 'right top', enable: true }">？</button>
+                        <button data-bind="ntsHelpButton: {image: 'helpcps0092.png',position: 'left bottom', enable: true }">？</button>
                     </div>
                 </div>
                 <hr/>
-                <table id="grid"/>
+                <table id="grid" tabindex="2"/>
             </div>
         </div>
         <div id="functions-area-bottom">
